<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bg2"
    android:scrollbars="vertical">
    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_marginTop="35dp"
            android:id="@+id/textID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gate_name"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/cnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cnum"
            android:gravity="center"
            android:inputType="number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_marginTop="20dp"
            android:id="@+id/btnScanBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_camera"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/White"
            />
        <TextView
            android:id="@+id/server"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/un"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/un"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/pwd"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/cellNum"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/randString"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/appID"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appID"
            android:textColor="@color/White"
            android:textStyle="bold"
            />
    </LinearLayout>

</ScrollView>